--- a/@1pedrinn_/INDEX.HTML
+++ b/@1pedrinn_/INDEX.HTML
@@ -8,7 +8,9 @@
 </head>
 <body>
     <section class="conteudo-principal">
-        
+       <div class="botoes">
+
+       </div>
     </section>
 </body>
 </html>
