--- a/@1pedrinn_/INDEX.HTML
+++ b/@1pedrinn_/INDEX.HTML
@@ -1,16 +1,21 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>meus objetivos do ano</title>
 </head>
 <body>
     <section class="conteudo-principal">
        <div class="botoes">
-
-       </div>
+        <button class="botao">Cursos na Alura</button>
+        <button class="botao">Criar projetos em JavaScript</button>
+        <button class="botao">Criar um portfólio</button>
+        <button class="botao">Atualizar meu currículo</button>
+      </div>
     </section>
+       </div>
 </body>
 </html>
