--- a/@1pedrinn_/INDEX.HTML
+++ b/@1pedrinn_/INDEX.HTML
@@ -6,9 +6,10 @@
   <title>Meus objetivos do ano</title>
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <section<section class="conteudo-principal">
-        <h2 class="titulo-principal">Meus Objetivos do ano_</h2>
+        <h2 class="titulo-principal">Meus Objetivos do ano<span>_</span></h2>
         <div class="botoes">
           <button class="botao">Cursos na Alura</button>
           <button class="botao">Criar projetos em JavaScript</button>
@@ -16,5 +17,7 @@
           <button class="botao">Atualizar meu currículo</button>
         </div>
       </section>
-</body>
-</html>
+      <script src="main.js"></script>
+    </body>
+    </html>
+    
